--- a/.github/workflows/weekly-games.yml
+++ b/.github/workflows/weekly-games.yml
@@ -15,9 +15,14 @@ jobs:
     - name: Set up Python
       uses: actions/setup-python@v4
       with:
-        python-version: '3.10'
+        python-version: '3.12'
         
-    - name: Install dependencies
+    - name: Install system dependencies
+      run: |
+        sudo apt-get update
+        sudo apt-get install -y xvfb
+        
+    - name: Install Python dependencies
       run: |
         python -m pip install --upgrade pip
         pip install -r requirements.txt
@@ -27,4 +32,5 @@ jobs:
         echo '${{ secrets.EPIC_ACCOUNTS }}' > accounts.json
         
     - name: Run Epic Games Collector
-      run: python main.py 
+      run: |
+        xvfb-run python src/epic_awesome_gamer/epic_games.py 
