--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,5 @@
-hcaptcha-challenger[camoufox]>=0.17.1
-pydantic-settings>=2.8.1
+hcaptcha-challenger[camoufox]==0.18.5
+pydantic-settings==2.9.1
 selenium==4.15.2
 webdriver-manager==4.0.1
 python-dotenv==1.0.0
