--- a/.github/workflows/weekly-games.yml
+++ b/.github/workflows/weekly-games.yml
@@ -23,10 +23,11 @@ jobs:
         sudo apt-get update
         sudo apt-get install -y xvfb
         
+    - name: Install uv
+      run: pip install uv
+
     - name: Install Python dependencies
-      run: |
-        python -m pip install --upgrade pip
-        pip install -r requirements.txt
+      run: uv pip install -r requirements.txt
         
     - name: Create accounts file
       run: |
