--- a/.github/workflows/weekly-games.yml
+++ b/.github/workflows/weekly-games.yml
@@ -27,6 +27,9 @@ jobs:
     - name: Install uv
       run: pip install uv
 
+    - name: Create virtual environment
+      run: uv venv
+
     - name: Install Python dependencies
       run: uv pip install -r requirements.txt
         
