--- a/epic-awesome-gamer-main/pyproject.toml
+++ b/epic-awesome-gamer-main/pyproject.toml
@@ -4,6 +4,7 @@ version = "0.4.1"
 dependencies = [
     "hcaptcha-challenger[camoufox]>=0.17.1",
     "pydantic-settings>=2.8.1",
+    "loguru",
 ]
 requires-python = ">=3.12"
 authors = [
