--- a/epic-awesome-gamer-main/pyproject.toml
+++ b/epic-awesome-gamer-main/pyproject.toml
@@ -5,6 +5,7 @@ dependencies = [
     "hcaptcha-challenger[camoufox]>=0.17.1",
     "pydantic-settings>=2.8.1",
     "loguru",
+    "requests",
 ]
 requires-python = ">=3.12"
 authors = [
